--- a/src/views/pages/tabelaItensNovos.ejs
+++ b/src/views/pages/tabelaItensNovos.ejs
@@ -26,30 +26,29 @@
 
    .table-container table {
       width: 100%;
-      border-collapse: separate; /* Muda para separate para evitar sobreposição de bordas */
-      border-spacing: 0; /* Remove qualquer espaçamento entre as células */
+      border-collapse: separate;
+      border-spacing: 0;
    }
 
    .table-container th,
    .table-container td {
       word-wrap: break-word;
       white-space: nowrap;
-      border: none !important; /* Remove qualquer borda padrão das células */
+      border: none !important;
    }
 
    .table-container thead th {
       position: sticky;
       top: 0;
-      background-color: rgb(231, 161, 9); /* Fundo laranja para o thead */
-      color: white; /* Texto branco para contraste */
-      border-left: 1px solid white !important; /* Borda branca à esquerda para todas as colunas */
-      border-right: none !important; /* Remove borda à direita */
-      border-top: none !important; /* Remove borda superior */
-      border-bottom: 1px solid white !important; /* Adiciona uma borda inferior branca para separação */
+      background-color: rgb(231, 161, 9);
+      color: white;
+      border-left: 1px solid white !important;
+      border-right: none !important;
+      border-top: none !important;
+      border-bottom: 1px solid white !important;
       z-index: 1;
    }
 
-   /* Garante que a última coluna não tenha borda à direita */
    .table-container thead th:last-child {
       border-right: none !important;
    }
@@ -73,7 +72,6 @@
       width: 90% !important;
    }
 
-   /* Media Query para notebooks */
    @media (max-width: 1366px) {
       .caixa-externa {
          max-height: 73vh;
@@ -89,6 +87,32 @@
       .botoes {
          margin-bottom: 1rem;
       }
+   }
+
+   /* Ajuste das colunas */
+   .table-container th:nth-child(1), /* ID */
+   .table-container td:nth-child(1) {
+      width: 3%;
+   }
+
+   .table-container th:nth-child(2), /* Entrada */
+   .table-container td:nth-child(2) {
+      width: 6%;
+   }
+
+   .table-container th:nth-child(3), /* Descrição */
+   .table-container td:nth-child(3) {
+      width: 35%;
+   }
+
+   .table-container th:nth-child(5), /* Categoria */
+   .table-container td:nth-child(5) {
+      width: 15%;
+   }
+
+   .table-container th:last-child, /* Ações */
+   .table-container td:last-child {
+      width: 10%;
    }
 </style>
 
@@ -137,7 +161,7 @@
                            <td class="py-1 text-center"><%= item.estoque %></td>
                            <td class="py-1 text-center"><%= item.situacao %></td>
                            <td class="py-1 text-center">
-                              <a href="/estoque/visualizar/<%= item.id %>" class="btn btn-secondary btn-sm view-btn btn-action">Detalhes</a>
+                              <button type="button" class="btn btn-secondary btn-sm btn-action" data-id="<%= item.id %>">Detalhes</button>
                               <a href="/excluir/<%= item.id %>" class="btn btn-danger btn-sm btn-action btn-delete">Excluir</a>
                            </td>
                         </tr>
@@ -153,96 +177,92 @@
       </div>
    </div>
 
-   <!-- JavaScript para exibição do modal -->
    <script>
       document.addEventListener('DOMContentLoaded', () => {
-         const viewButtons = document.querySelectorAll('.view-btn');
-
+         const viewButtons = document.querySelectorAll('.btn-action');
          viewButtons.forEach(button => {
             button.addEventListener('click', async (event) => {
-               event.preventDefault();
-               const url = event.target.href;
-               try {
-                  const response = await fetch(url);
-                  const item = await response.json();
-
-                  if (item) {
-                     const modalHtml = `
-                        <div class="modal fade show" id="infoTomboModal" tabindex="-1" aria-labelledby="infoTomboModalLabel" aria-hidden="true">
-                           <div class="modal-dialog modal-dialog-centered" style="transform: scale(1);">
-                           <div class="modal-content">
-                              <div class="modal-header bg-success text-white d-flex justify-content-between">
-                              <h3 class="modal-title ms-3" id="infoTomboModalLabel">Informações do Tombo</h3>
-                              <button type="button" class="btn text-white" data-bs-dismiss="modal" aria-label="Close">
-                                 <i class="fa fa-times fa-lg"></i>
-                              </button>
-                              </div>
-                              <div class="modal-body">
-                              <div class="card">
-                                    <div class="card-body pb-0">
-                                    <h5 class="card-title">${item.descricao}</h5>
-                                    <p class="card-text">
-                                       <h5 class="bg-primary text-white p-2">Dados da Entrada</h5>
-                                       <strong>ID:</strong> ${item.id} <br/>
-                                       <strong>Tombo:</strong> ${item.tombo} <br/>
-                                       <strong>Data de Entrada:</strong> ${new Date(item.data_de_entrada).toLocaleDateString('pt-BR')} <br/>
-                                       <strong>Categoria:</strong> ${item.categoria} <br/>
-                                       <strong>Doc Origem:</strong> ${item.doc_origem} <br/>
-                                       <strong>Estoque:</strong> ${item.estoque} <br/>
-                                       <strong>Valor:</strong> ${parseFloat(item.valor).toLocaleString('pt-BR', { style: 'currency', currency: 'BRL' })} <br/>
-                                       <strong>Situação:</strong> ${item.situacao} <br/>
-                                       <strong>Observação:</strong> ${item.observacao || 'N/A'} <br/>
-                                    </p>
+               if (!event.target.classList.contains('btn-delete')) {
+                  const itemId = event.target.getAttribute('data-id');
+                  const url = `/visualizar/${itemId}`;
+                  try {
+                     console.log("Fetching data for item ID:", itemId);
+                     const response = await fetch(url);
+                     if (!response.ok) {
+                        throw new Error(`ERRO: ${response.statusText.toUpperCase()}`);
+                     }
+                     const item = await response.json();
+                     console.log("Data fetched:", item);
+                     if (item) {
+                        const modalHtml = `
+                           <div class="modal fade show" id="infoTomboModal" tabindex="-1" aria-labelledby="infoTomboModalLabel" aria-hidden="true">
+                              <div class="modal-dialog modal-dialog-centered" style="transform: scale(1);">
+                                 <div class="modal-content">
+                                    <div class="modal-header bg-success text-white d-flex justify-content-between">
+                                       <h3 class="modal-title ms-3" id="infoTomboModalLabel">Informações do Tombo</h3>
+                                       <button type="button" class="btn text-white" data-bs-dismiss="modal" aria-label="Close">
+                                          <i class="fa fa-times fa-lg"></i>
+                                       </button>
+                                    </div>
+                                    <div class="modal-body">
+                                       <div class="card">
+                                          <div class="card-body pb-0">
+                                             <h5 class="card-title">${item.descricao}</h5>
+                                             <p class="card-text">
+                                                <h5 class="bg-primary text-white p-2">Dados da Entrada</h5>
+                                                <strong>ID:</strong> ${item.id} <br/>
+                                                <strong>Tombo:</strong> ${item.tombo} <br/>
+                                                <strong>Data de Entrada:</strong> ${item.data_de_entrada} <br/>
+                                                <strong>Categoria:</strong> ${item.categoria} <br/>
+                                                <strong>Doc Origem:</strong> ${item.doc_origem || 'N/A'} <br/>
+                                                <strong>Estoque:</strong> ${item.estoque} <br/>
+                                                <strong>Valor:</strong> ${item.valor} <br/>
+                                                <strong>Situação:</strong> ${item.situacao} <br/>
+                                                <strong>Observação:</strong> ${item.observacao || 'N/A'} <br/>
+                                             </p>
+                                          </div>
+                                       </div>
+                                    </div>
                                  </div>
                               </div>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-                     `;
+                           </div>`;
+                        const modalDiv = document.createElement('div');
+                        modalDiv.innerHTML = modalHtml;
+                        document.body.appendChild(modalDiv);
 
-                     const modalDiv = document.createElement('div');
-                     modalDiv.innerHTML = modalHtml;
-                     document.body.appendChild(modalDiv);
+                        const infoTomboModal = new bootstrap.Modal(document.getElementById('infoTomboModal'), {
+                           backdrop: true,
+                           focus: true
+                        });
+                        infoTomboModal.show();
 
-                     const infoTomboModal = new bootstrap.Modal(document.getElementById('infoTomboModal'), {
-                        backdrop: true,
-                        focus: true
-                     });
-
-                     infoTomboModal.show();
-
-                     infoTomboModal._element.addEventListener('hidden.bs.modal', () => {
-                        modalDiv.remove();
-                     });
+                        infoTomboModal._element.addEventListener('hidden.bs.modal', () => {
+                           modalDiv.remove();
+                        });
+                     }
+                  } catch (error) {
+                     console.error('ERRO AO BUSCAR INFORMAÇÕES DO ITEM:', error.message.toUpperCase());
+                     alert('Erro ao carregar os detalhes. Verifique o console para mais informações.');
                   }
-               } catch (error) {
-                  console.error('Erro ao buscar informações do tombo:', error);
                }
             });
          });
 
-         // Adicionar evento para o botão de exportação
          const exportarBtn = document.getElementById('exportarBtn');
          exportarBtn.addEventListener('click', (event) => {
             event.preventDefault();
             const formato = document.getElementById('formato').value;
             window.location.href = `/relatorio/novos?formato=${formato}`;
          });
-      });
-   </script>
 
-   <script>
-      document.addEventListener('DOMContentLoaded', () => {
          const deleteButtons = document.querySelectorAll('.btn-delete');
-
          deleteButtons.forEach(button => {
             button.addEventListener('click', async (event) => {
                event.preventDefault();
 
                const confirmation = confirm("Você tem certeza que deseja excluir este item? Esse processo é irreversível.");
                if (!confirmation) {
-                  return; // Se o usuário cancelar, não faça nada
+                  return;
                }
 
                const url = event.target.href;
@@ -252,7 +272,7 @@
 
                   if (response.ok) {
                      alert('Item deletado com sucesso!');
-                     location.reload(); // Atualiza a página para refletir a exclusão
+                     location.reload();
                   } else {
                      alert(result.msg);
                   }
