Correção dos dados do Cel Alla

--- a/src/views/pages/cadastrarEstoque.ejs
+++ b/src/views/pages/cadastrarEstoque.ejs
@@ -96,7 +96,7 @@
                      </div>
                   </div>
 
-                  <div class="col-md-8">
+                  <div class="col-md-7">
                      <div id="observacao-div" class="mb-3">
                         <label class="form-label fw-bold">Descrição</label>
                         <input placeholder="Descreva o item em detalhes." id="descricao" name="descricao" type="text"
@@ -104,9 +104,9 @@
                      </div>
                   </div>
 
-                  <div class="col-md-2">
+                  <div class="col-md-3">
                      <div id="situacao-div" class="mb-3">
-                        <label class="form-label fw-bold">Situação</label>
+                        <label class="form-label fw-bold">Conservação</label>
                         <select id="situacao" class="form-select" name="situacao">
                            <option selected>Escolha uma opção...</option>
                            <option value="novo">Novo</option>
