--- a/src/views/pages/login.ejs
+++ b/src/views/pages/login.ejs
@@ -12,7 +12,7 @@
       }
       /* Increase the width of the form container to match the registration form */
       .caixa-externa {
-         width: 300px;
+         width: 350px;
          max-width: 100%;
       }
    </style>
@@ -31,7 +31,7 @@
                      <label for="matricula" class="form-label">Matrícula Funcional</label>
                      <div class="input-group">
                            <span class="input-group-text"><i class="fas fa-id-card"></i></span>
-                           <input type="text" class="form-control input-custom" id="matricula" name="matricula" placeholder="Entre com sua MF" autocomplete="username" required>
+                           <input type="text" class="form-control input-custom" id="matricula" name="matricula" placeholder="Somente digitos, sem pontos ou traços." autocomplete="username" required>
                      </div>
                   </div>
                   <div class="form-group mb-3">
